# LaneExtraction

./: MIGRATION.md  main.py  migration_plan.md  report.txt
code/: pyproject.toml
code/cnnmodels/: classifier.py  resnet.py  resnet18unet.py  resnet34unet.py  tf_common_layer.py
code/framework/: model.py  training.py
code/laneAndDirectionExtraction/: infer.py  model.py  train.py
code/turningLaneExtraction/: infer.py  model.py
code/turningLaneValidation/: infer.py  model.py
