[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "scipy>=1.10.0",
    "tensorflow==2.13.0",
    "tf-slim>=1.1.0",
]
